# ForgetfulML

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
forgetful_ml/: __init__.py  functions.py
tests/: requirements.txt  test_functions.py
