[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "forgetful-ml"
description = "An unlearning framework that enables AI models to selectively forget learned data, ensuring compliance, privacy, and adaptability."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "Ali Faraji", email = "unlearning@faraji.info" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "torch>=1.7.0",
    "numpy>=1.24.4",
]

dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/alifa98/ForgetfulML/"
"Documentation" = "https://github.com/alifa98/ForgetfulML/wiki"
"Source" = "https://github.com/alifa98/ForgetfulML/"

[tool.setuptools.packages.find]
where = ["forgetful_ml"]
exclude = ["tests*", "tests/*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
